kubernetes-networks/canary/web_v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-v2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
      version: v2
  template:
    metadata:
      name: web
      labels:
        app: web
        version: v2
    spec:
      containers:
        - name: web
          image: polovina/hw1:v2
          volumeMounts:
          - name: app
            mountPath: "/app"
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /index.html 
              port: 8000
      volumes:
        - name: app
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc-v2 
spec:
  selector:
    app: web
    version: v2
  type: ClusterIP
  clusterIP: None
  ports:
  - protocol: TCP 
    port: 80
    targetPort: 8000
